Ensure select chevron in visible in forced colors mode.

--- a/src/stylesheets/elements/form-controls/_dropdown.scss
+++ b/src/stylesheets/elements/form-controls/_dropdown.scss
@@ -22,4 +22,11 @@
     color: transparent;
     text-shadow: 0 0 0 color("black");
   }
+  
+   // Necessary to show chevron in forced colors mode in modern browsers. 
+   @media (forced-colors: active) {
+    appearance: listbox; // Default <select> appearance value for modern browsers.
+    background-image: none;
+    padding-right: 0;
+  }
 }
